# polyqep

./: .gitignore  .zenodo.json  LICENSE  README.md  pyproject.toml
examples/: amichi_plate_8x8.py
src/polyqep/: __init__.py  fitting.py  intervals.py  mdof_6dof.py  polynomial_qep.py  pw_refined.py  qep_solver.py  rom.py  transfer_function.py
src/polyqep/models/: __init__.py  sandwich_plate_amichi2010.py
