[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "polyqep"
version = "0.1.0"
description = "PolyQEP: piecewise-continuous modulus framework and PW-Refined reduced-order models for frequency-response analysis with frequency-dependent viscoelastic damping"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Seung-Hoon Bae", email = "shbae@kimm.re.kr" },
]
keywords = [
    "viscoelastic damping",
    "frequency response",
    "quadratic eigenvalue problem",
    "reduced-order model",
    "SOAR",
    "structural dynamics",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.24,<3.0",
    "scipy>=1.10,<2.0",
]

[project.optional-dependencies]
examples = ["matplotlib>=3.7,<4.0"]

[tool.setuptools.packages.find]
where = ["src"]
